# gtranslator

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  BRANCHES  ChangeLog  DEPENDS  DEVELOPMENT_STOPPED_FOR_THIS_BRANCH  HACKING  INSTALL.CVS  MAINTAINERS  MAINTENANCE  Makefile.am  NEWS  PROJECT.STATUS-DEAD  README  README.GConf  README.md  SEEKS_NEW_PROJECT_LEADER  THANKS  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure.ac  configure.in  gobject-linter.toml  goblint.toml  gtranslator.desktop  gtranslator.doap  gtranslator.glade  gtranslator.keys.in  gtranslator.spec.in  kabalak_generate_all_the_files.sh  meson.build  meson.options  meson_options.txt  pozilla.sh  teams.xml
data/: .cvsignore  ChangeLog  Makefile.am  gtr-languages.ini  gtr-plural-forms.ini  gtr-toolbar.xml  gtranslator-ui.xml  gtranslator.appdata.xml.in  gtranslator.desktop  gtranslator.keys.in  gtranslator.mime  gtranslator.pc.in  gtranslator.schemas.in  gtranslatord.oafinfo  layout.xml  meson.build  org.gnome.Gtranslator.appdata.xml.in  org.gnome.Gtranslator.appdata.xml.in.in  org.gnome.Gtranslator.desktop.in  org.gnome.Gtranslator.desktop.in.in  org.gnome.Gtranslator.gschema.xml.in  org.gnome.Gtranslator.metainfo.xml.in.in  org.gnome.Gtranslator.service.in  org.gnome.gtranslator.gschema.xml.in  org.gnome.gtranslator.gschema.xml.in.in  po.lang
data/colorschemes/: .cvsignore  Makefile.am  arek.xml  boom-boom.xml  clean.xml  curlymonster.xml  default.xml  extremely-kabalak.xml  kabalak.xml  kbabel.xml  menesis.xml  mmc.xml  nizuu.xml  pdmc.xml  sepia.xml  spiffE.xml  thinice.xml  toyfactory.xml  tuey.xml  vim.xml  waliays.xml  yef.xml  zuper.xml
data/desktop/: .cvsignore  Makefile.am  gtranslator.desktop  gtranslator.desktop.in  gtranslator.desktop.in.in
data/etspecs/: .cvsignore  Makefile.am  messages-table.etspec
data/gconf/: Makefile.am  gtranslator.schemas
data/gnome-config/: .cvsignore  Makefile.am  gtranslatorConf.sh.in
data/icons/: meson.build
data/mime/: .cvsignore  Makefile.am  gtranslator.keys.in  gtranslator.keys.in.in  gtranslator.keys_template.in  gtranslator.mime
data/oaf/: .cvsignore  Gtranslator_Gtranslatord.oaf  Gtranslator_Gtranslatord.oaf.in  Makefile.am  Nautilus_Gtranslator_View.oaf.in  gtranslatord.oafinfo
data/pixmaps/: .cvsignore  Makefile.am  meson.build
data/pkg-config/: .cvsignore  Makefile.am  gtranslator.pc.in
data/scripts/: .cvsignore  Makefile.am  build-gtranslator-learn-buffer.sh  cleanup-gtranslator-settings.sh  my-update.sh  pozilla.sh  update.sh
data/sourceview/: gtranslator.lang
data/ui/: .cvsignore  Makefile.am  beginners_druid.glade  beginners_druid.glade.h  nautilus-gtranslator-view-ui.xml  open_po_file_dialog.glade  open_po_file_dialog.glade.h  preferences.glade  preferences.glade.h
doc/UMTF/: .cvsignore  COMMENTS  ChangeLog  Makefile.am  README.UMTF  example.xml  umtf.dtd
doc/reference/: Makefile.am  gtranslator-docs.sgml  gtranslator.types  meson.build
gtranslator/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.in  gtranslator.desktop  gtranslator.mime  gtranslator.tem
gtranslator/help/: Makefile.am  Makefile.in
gtranslator/macros/: Makefile.in  autogen.sh
gtranslator/po/: ChangeLog  POTFILES.in  cat-id-tbl.c  gtranslator.pot  no.po  tr.po
gtranslator/prep-scripts/: Makefile.am  Makefile.in  README  complex.sh.in  count_lines.sh  cut_the_header.sh.in  split_it_with_awk.sh.in
gtranslator/src/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  callbacks.c  callbacks.h  header_stuff.c  interface.c  interface.h  parse.c  parse.h
help/: ChangeLog  LINGUAS  Makefile.am  gtranslator.omf.in  meson.build
help/C/: .cvsignore  Makefile.am  authors.xml  basicinfos.html  gtr-add-comment-po.page  gtr-concepts.page  gtr-create-tm.page  gtr-credits-design.page  gtr-credits-dev.page  gtr-credits-trans.page  gtr-custom.page  gtr-edit-header.page  gtr-edit-po.page  gtr-faq.page  gtr-goto-string-po.page  gtr-join-developers.page  gtr-join-users.page  gtr-main-window.page  gtr-open-po.page  gtr-plugins.page  gtr-profiles.page  gtr-quickstart.page  gtr-report-problem.page  gtr-reserve-po.page  gtr-save-po.page  gtr-shortcut-keys.page  gtr-translate.page  gtr-upload-po.page  gtr-use-delete-entry.page  gtr-wizzard.page  gtranslator-C.omf  gtranslator-C.omf.presetup  gtranslator.sgml  gtranslator.xml  index.html  index.html.in  index.page  newreleases.html  todo.html
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ja/: .cvsignore  Makefile.am  gtranslator-ja.omf.presetup  gtranslator.sgml  ja.po
libgtranslator/: .cvsignore  ChangeLog  Makefile  Makefile.am  Makefile.in  foo.xml  gtkled.c  gtkled.h  gtranslator-preferences-dialog.c  gtranslator-preferences-dialog.h  gtranslator.idl  gtranslatord.idl  handle-db.c  handle-db.h  libgtranslator.h  main.c  messages.h  parse-db.c  parse-db.h  preferences.c  preferences.h  recent-files.c  recent-files.h  stylistics.c  stylistics.h  team-database.h  team-handle.c  team-handle.h  test-lg.c  translation-database.h  vfs-handle.c  vfs-handle.h
man/: .cvsignore  Makefile.am  gtranslator.1  gtranslator.1.in  meson.build  nautilus-gtranslator-view.1.in  pozilla.sh.1
nautilus-view/: .cvsignore  ChangeLog  Makefile.am  main.c  nautilus-gtranslator-view.c  nautilus-gtranslator-view.h
plugins/: Makefile.am
src/: #gtr-notebook.ui#  .cvsignore  ChangeLog  Makefile.am  TODO.src  about.c  about.h  actions-documents.c  actions-edit.c  actions-file.c  actions-go.c  actions-help.c  actions-search.c  actions-view.c  actions.c  actions.h  application.c  application.h  args-tags.c  args-tags.h  backend.c  backend.h  beginners-druid-functions.c  beginners-druid-functions.h  beginners-druid-interface.c  beginners-druid-interface.h  bookmark.c  bookmark.h  callbacks.c  callbacks.h  charmap-panel.c  charmap-panel.h  color-schemes.c  color-schemes.h  comment.c  comment.h  compile.c  compile.h  context.c  context.h  (+331 more)
(+540 files in other folders)
